--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
     "build": "rimraf ./build && tsc",
     "start": "node build/inde.js",
     "dev": "nodemon --legacy-watch --exec ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "commitlint": "npx husky add .husky/commit-msg  'npx --no -- commitlint --edit ${1}'"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "husky": "^8.0.3",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
