--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "nodemon": "^3.0.1",
@@ -23,5 +24,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
